--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
 .App {
 	text-align: center;
+	background-color: gray;
+
+	margin: 1rem;
+	padding: 1rem;
 }
 
 img {
 	width: 90%;
 	margin: auto;
+	border: hidden;
+	border-radius: 5px;
+	box-shadow: 5px 5px 5px;
 }
 
